@@ -1,3 +1,4 @@
+* Make language code unique
 * Support base64 encoded data in ModelStorage.import_data
 * Add BOOL_AND and BOOL_OR to SQLite backend
 
